Fix title not centered issue in > 1440px reso

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -136,17 +136,13 @@ section {
 	.wrapper { padding: 50px 0 200px; }
 
 	.section-title {
-		width: 50%;
+		width: 100%;
 		margin: 0;
 		font-size: 9.5rem;
 		font-weight: 500;
 		line-height: 1;
 		text-align: center;
 		text-transform: uppercase;
-
-		@include breakpoint(pc) {
-			width: 100%;
-		}
 
 		@include breakpoint(small-pc) {
 			font-size: 7rem;
